<resources>

    <string name="app_name">SafePoll</string>
    <string name="action_settings">Opciones</string>
    <string name="action_search">Buscar grupos</string>
    <string name="login_Button">Iniciar sesión</string>
    <string name="textlink_signUp">Registrarse</string>
    <string name="textlink_recoverPass">He olvidado mi contraseña</string>
    <string name="actionbar_groupsearch_hint">Buscar grupos</string>
    <string name="search_activity">Buscar grupos</string>
    <string name="msg_no_votes">No hay votaciones activas en estos momentos</string>
    <string name="msg_no_history">No existen votaciones terminadas para este grupo</string>
    <string name="vote_name">Nombre de la votación</string>
    <string name="vote_text">Texto explicativo de la votación en curso</string>
    <string name="vote_question">¿Qué desea votar?</string>
    <string name="vote_yes">Si.</string>
    <string name="vote_no">No.</string>
    <string name="vote_sendButton">Enviar voto</string>
    <string name="signup_name">Nombre</string>
    <string name="signup_pass">Contraseña</string>
    <string name="signup_mail">E-mail</string>
    <string name="signup_real_certificate">Tengo un certificado digital</string>
    <string name="signup_local_certificate">Crear certificado local</string>
    <string name="passrecover_title">Recuperación de contraseña</string>
    <string name="passrecover_text">Escriba la cuenta de e-mail que usó para registrarse:</string><string name="passrecover_cert_text">Si tiene un certificado asociado a su cuenta, puede usarlo para recuperar su dirección de E-mail</string><string name="app_send">Enviar</string>
    <string name="signup_button">Registrar cuenta</string>
    <string name="pref_general_settings">Opciones generales</string>
    <string name="pref_summary_activate_notifications">Activar o desactivar notificaciones</string>
    <string name="pref_title_activate_notifications">Notificaciones activas</string>
    <string name="pref_summary_notif_refresh_time">Cada cuanto tiempo la aplicación buscará nuevas notificaciones</string>
    <string name="pref_title_notif_refresh_time">Frecuencia de escaneo</string>
    <string name="pref_about">Sobre SafePoll</string>
    <string name="pref_title_about_version">Versión actual: 1.0</string>
    <string name="signup_title">Registrar nuevo usuario</string>
    
    <string name="pref_user">Usuario</string>
    <string name="pref_title_user_pass">Cambiar contraseña</string>
    <string name="pref_summary_user_pass">Cambiar la contraseña de su cuenta de SafePoll</string><string name="dialog_oldpass_text">Escriba su antigua contraseña</string>
    <string name="dialog_newpass_text">Escriba su nueva contraseña</string>
    <string name="dialog_repeatpass_text">Repita la nueva contraseña</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="signup_lastname">Apellidos</string>
    <string name="action_newgroup">Crear nuevo grupo</string>
    <string name="action_overflow">Más opciones</string>
    <string name="newgroup_title">Crear nuevo grupo</string>
    <string name="newgroup_name">nombre del grupo</string>
    <string name="newgroup_description">Descripción</string>
    <string name="newgroup_buttonCANCEL">Cancelar</string>
    <string name="newgroup_buttonOK">Crear grupo</string>
    <string name="action_newpoll">Nueva votación</string>
    <string name="newpoll_title">Nueva Votación</string>
    <string name="newpoll_description">Descripción del tema a votar</string>
    <string name="newpoll_question">¿Qué desea preguntar?</string>
    <string name="newpoll_pick_date">Introducir fecha límite</string>
    <string name="newpoll_button">Crear nueva votación</string>
    <string name="newpoll_add_answer">Añada una respuesta</string>
    <string name="newpoll_pick_time">Introducir hora</string>
    <string name="get_certificate_button">Seleccionar certificado</string>
    <string name="pref_title_select_cert">Seleccionar certificado</string>
    <string name="pref_summary_select_cert">Ningún elemento seleccionado</string>
    <string name="pref_title_update_cert">Actualizar certificado</string>
    <string name="pref_summary_update_cert">Seleccionar una versión renovada de su certificado (Debe instalarla previamente)</string>
    <string name="pref_title_chain_cert">Vincular certificado a la cuenta</string>
    <string name="pref_summary_chain_cert">Hacer que el certificado actual sea el elegido para esta cuenta</string>
    <string name="newpoll_signed">Exigir firma digital</string>
    <string name="newgroup_option_private">Grupo privado</string>
    <string name="newgroup_option_requeriment">Obligatorio tener un certificado digital</string>
    <string name="pref_group_settings">Opciones de grupo</string>
    <string name="pref_summary_group_private">Los usuarios deben enviar una petición para poder entrar a un grupo privado.</string>
    <string name="pref_title_group_private">Grupo privado</string>
    <string name="pref_summary_group_requeriment">Requerir que todo miembro del grupo tenga un certificado digital para poder participar</string>
    <string name="pref_title_group_requeriment">Uso obligatorio de certificados</string>
    <string name="admbutton_options">Opciones de grupo</string>
    <string name="admbutton_requests">Solicitudes de acceso</string>
    <string name="admbutton_members">Miembros del grupo</string>
    <string name="image_contentDescription">Imagen</string>
    <string name="text_add">+</string>
    
    

</resources>
