<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
<LinearLayout
    android:id="@+id/pager_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0.8" >        
	<android.support.v4.view.ViewPager
	    android:id="@+id/pager"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
</LinearLayout>

<LinearLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2"
        android:visibility="invisible" >
    		<RelativeLayout 
    		    android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal">
    		    
    		    <ImageButton
                android:id="@+id/adm_group_options"
                android:src="@drawable/ic_action_settings"
                android:contentDescription="@string/admbutton_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="?android:attr/borderlessButtonStyle" />
    		    
    		    <ImageButton
                android:id="@+id/adm_group_requests"
                android:src="@drawable/ic_action_add_person"
                android:contentDescription="@string/admbutton_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/adm_group_options"
                style="?android:attr/borderlessButtonStyle" />
    		    
    		    <ImageButton
                android:id="@+id/adm_group_members"
                android:src="@drawable/ic_image_nogroup"
                android:contentDescription="@string/admbutton_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/adm_group_requests"
                style="?android:attr/borderlessButtonStyle" />
				
    		</RelativeLayout>
            
        </LinearLayout>
</LinearLayout>



