<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/dialog_oldpass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/dialog_oldpass_text" />

    <EditText
        android:id="@+id/dialog_oldpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_oldpass_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword" >
        
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/dialog_newpass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_oldpass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/dialog_newpass_text" />

    <EditText
        android:id="@+id/dialog_newpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_newpass_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/dialog_repeatpass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_newpass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/dialog_repeatpass_text" />

    <EditText
        android:id="@+id/dialog_repeatpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dialog_repeatpass_text"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword" />
        
</RelativeLayout>
